--- a/audioEstudio.html
+++ b/audioEstudio.html
@@ -33,7 +33,7 @@
         /* Estilos de las tarjetas de temas */
         .topic-card { background-color: #27272a; } /* zinc-800 */
         .topic-card:hover { background-color: #3f3f46; } /* zinc-700 */
-        .topic-card.active { background-color: #6d28d9; color: #fff; } /* violet-700 */
+        .topic-card.active { background-color: #06b6d4; color: #fff; } /* Color Turquesa */
         .topic-card.active i { color: #fff; }
 
         #player-container { transition: background 0.8s ease; }
