--- a/audioEstudio.html
+++ b/audioEstudio.html
@@ -32,7 +32,7 @@
 
         /* Estilos de las tarjetas de temas */
         .topic-card { background-color: #27272a; } /* zinc-800 */
-        .topic-card:hover { background-color: #3f3f46; } /* zinc-700 */
+        .topic-card:hover { background-color: ##1DB954; } /* zinc-700 */
          topic-card.active { background-color: #1DB954; color: #fff; } 
         .topic-card.active i { color: #fff; }
 
