--- a/audioEstudio.html
+++ b/audioEstudio.html
@@ -59,6 +59,8 @@
 <body class="bg-black text-white flex items-center justify-center min-h-screen p-4">
 
     <div id="player-container" class="w-full max-w-lg mx-auto bg-gray-900 rounded-2xl shadow-2xl overflow-hidden">
+
+        <div id="logo" class="absolute top-6 left-6 text-xl font-semibold text-white z-10">Spotequito</div>
         
         <audio id="audioPlayer" crossOrigin="anonymous"></audio>
 
